 + Themes can now use flakes with negative falling speed (rising flakes)
 + Themes can now contain custom sound files: splash.ogg Droplet1.ogg Droplet2.ogg Droplet3.ogg skip.ogg

Lua-API:
 + New call: SetCinematicMode(enable) -- e.g. for cutscenes etc.
 + New call: GetAmmoName(ammoType) -- returns the localized name for the specified ammoType
 + New variable: WorldEdge -- World edge type (weNone, weWrap, weBounce, weSea)

0.9.21 -> 0.9.22
 + New Weapon / Map object: AirMine (floating mine that will follow nearby hedgehogs)
 + Extensive changes to TechRacer: Variable terrain types, enhanced parameters, hwmap interpreter, fuel limiter, etc. 
 + HedgeEditor - create missions/etc. in-game! see http://hedgewars.org/HedgeEditor
 + Map previews can now take script parameters into account and preview waypoints in TechRacer
 + Added a couple new flags
 + Various tweaks to the interface and in-game chat
 + Divided teams options will now just be ignored when more/less than 2 teams/clans, instead of displaying a fatal error
 + Added 6 TechRacer maps to TechMaps
 + Added 3 SpeedShoppa Challenges: Shoppa Love, Ropes and Crates, The Customer is King
 + Hammer damage is now rounded up. This means it can be used to execute hedgehogs with only 1 hp.
 + Improved "Art" theme.
 * Generated bridges/girders are now connected better to the land mass
 * Fixed rubberband sprite
 * Fixed Wind-Indicator being wrong in certain situations
 * Melon Bomb Pieces now bounce on Rubberband
 * Reduced menu music volume
 * The game will now fallback to default voicepack if a team's voicepack is not locally installed. (Instead of rendering team voiceless)
 * Hammer now does more damage when the Extra-Damage utility is used
 * Many other bug fixes

Lua-API:
 + New map parameter: MapFeatureSize -- numeric representation of detail slider below map preview; use within onGameInit()/onPreviewInit()